--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+xorg-server (2:1.7.6-1ubuntu2) lucid; urgency=low
+
+  * Add 112_xaa-fbcomposite-fix-negative-size.patch:  Prevent 3rd-party
+    controllable Xorg crash/exploit when XAA and compositing is in use.
+    Be more careful in sign-changes with mod().
+    (LP: #551193)
+
+ -- Bryce Harrington <bryce@ubuntu.com>  Mon, 29 Mar 2010 13:37:06 -0700
+
 xorg-server (2:1.7.6-1ubuntu1) lucid; urgency=low
 
   [Timo Aaltonen]
